--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -276,6 +276,8 @@
       headline = "SERVER RESET";
       msg = "Practice session is live. You have 15 minutes to re-enter the server.";
     } else if(mode === "green_console"){
+  // Neutral dark background (no green fill)
+      document.body.style.background = "#0b1220";  // same dark as Race Control
       dotClass = "green";
       headline = "GREEN FLAG — CONSOLE ONLY";
       msg = "Adhere to in game rules and flags.";
