--- a/simhub_flag.html
+++ b/simhub_flag.html
@@ -5,36 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>IFWL Flag</title>
   <style>
-    html,body{
-      height:100%;
-      margin:0;
-      font-family:system-ui;
-      overflow:hidden;
-      background:transparent;
-    }
-
-    /* Purple screen background (only used in check-in mode) */
+    html,body{height:100%;margin:0;font-family:system-ui;overflow:hidden;background:transparent;}
     body.purple{
       background: radial-gradient(circle at 25% 20%, #a78bfa 0%, #6d28d9 35%, #2e1065 75%, #120426 100%);
       color:#fff;
     }
-
-    #clearLayer{
-      position:fixed;
-      inset:0;
-      display:none;
-      pointer-events:none;
-      background: rgba(0,0,0,0.001);
-    }
-
-    .wrap{
-      height:100%;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:18px;
-    }
-
+    #clearLayer{position:fixed;inset:0;display:none;pointer-events:none;background: rgba(0,0,0,0.001);}
+    .wrap{height:100%;display:flex;align-items:center;justify-content:center;padding:18px;}
     .panel{
       width:min(520px, 96vw);
       border-radius:24px;
@@ -46,20 +23,15 @@
       color:#fff;
       box-shadow:0 18px 55px rgba(0,0,0,.55);
     }
-
     .big{font-weight:1000;letter-spacing:.6px;font-size: clamp(26px, 4.2vw, 40px);margin:0 0 8px}
     .sub{margin:0;opacity:.9;font-size: clamp(14px, 2.2vw, 18px);line-height:1.25}
     .stamp{margin-top:10px;font-family: ui-monospace, Menlo, Consolas, monospace;font-size: 12px;opacity:.85}
 
-    /* ✅ Safer flashing: slower + only used briefly */
+    /* safer flashing: slow + controlled by JS window */
     @keyframes rfFlash { 0%,49%{background:#000;} 50%,100%{background:#b30000;} }
     @keyframes vscFlash { 0%,49%{background:#000;} 50%,100%{background:#8a5a00;} }
-
-    /* Flashing classes (used only for ~2s) */
     body.red.flash { animation: rfFlash 1.2s infinite; }
     body.vsc.flash { animation: vscFlash 1.4s infinite; }
-
-    /* Solid background fallback after flash window */
     body.red.solid { background:#b30000; }
     body.vsc.solid { background:#8a5a00; }
 
@@ -67,75 +39,54 @@
     .dot.green{background:#22c55e; box-shadow:0 0 0 6px rgba(34,197,94,.18)}
     .dot.red{background:#ef4444; box-shadow:0 0 0 6px rgba(239,68,68,.18)}
     .dot.yellow{background:#f59e0b; box-shadow:0 0 0 6px rgba(245,158,11,.18)}
-
-    /* ✅ NEW: extra dot variants */
     .dot.silver{background:#cbd5e1; box-shadow:0 0 0 6px rgba(203,213,225,.18)}
     .dot.black{background:#111827; box-shadow:0 0 0 6px rgba(17,24,39,.18)}
+    .dot.blue{background:#3b82f6; box-shadow:0 0 0 6px rgba(59,130,246,.18)}
 
-    /* ✅ NEW: solid “quali split” background modes */
     body.qually_beginner{background:#b30000; color:#fff;}
     body.qually_ams{background:#9ca3af; color:#fff;}
     body.qually_pros{background:#ffffff; color:#111827;}
 
     /* Check-in UI */
-    .titleSmall{
-      font-weight:1000;
-      letter-spacing:.7px;
-      font-size:14px;
-      opacity:.95;
-      margin:0 0 10px;
-      font-family: ui-monospace, Menlo, Consolas, monospace;
-    }
-    .formRow{
-      display:flex;
-      gap:10px;
-      flex-wrap:wrap;
-      justify-content:center;
-      align-items:center;
-      margin-top:6px;
-    }
+    .titleSmall{font-weight:1000;letter-spacing:.7px;font-size:14px;opacity:.95;margin:0 0 10px;font-family: ui-monospace, Menlo, Consolas, monospace;}
+    .formRow{display:flex;gap:10px;flex-wrap:wrap;justify-content:center;align-items:center;margin-top:6px;}
     .nameInput{
-      flex: 1 1 260px;
-      max-width:420px;
-      padding:12px 12px;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,.20);
-      background: rgba(0,0,0,.25);
-      color:#fff;
-      outline:none;
-      font-family: ui-monospace, Menlo, Consolas, monospace;
-      font-size:14px;
+      flex: 1 1 260px;max-width:420px;padding:12px 12px;border-radius:14px;
+      border:1px solid rgba(255,255,255,.20);background: rgba(0,0,0,.25);color:#fff;outline:none;
+      font-family: ui-monospace, Menlo, Consolas, monospace;font-size:14px;
     }
     .sendBtn{
-      width:auto;height:auto;
-      padding:12px 16px;
-      border-radius:14px;
-      border:1px solid rgba(255,255,255,.20);
-      background: rgba(255,255,255,.10);
-      color:#fff;
-      font-weight:1000;
-      letter-spacing:.3px;
-      cursor:pointer;
-      box-shadow:none;
+      width:auto;height:auto;padding:12px 16px;border-radius:14px;border:1px solid rgba(255,255,255,.20);
+      background: rgba(255,255,255,.10);color:#fff;font-weight:1000;letter-spacing:.3px;cursor:pointer;box-shadow:none;
     }
     .sendBtn:disabled{opacity:.55;cursor:not-allowed}
-    .note{
-      margin:10px 0 0;
-      opacity:.9;
-      font-size:12px;
-      font-family: ui-monospace, Menlo, Consolas, monospace;
-      min-height:16px;
-    }
+    .note{margin:10px 0 0;opacity:.9;font-size:12px;font-family: ui-monospace, Menlo, Consolas, monospace;min-height:16px;}
     .ok{color:#86efac}
     .bad{color:#ff7a7a}
+
+    /* Broadcast message styling */
+    body.broadcast_bg{background:#0b1220;color:#fff;}
+    .msgBox{
+      margin-top:10px;
+      font-size: clamp(18px, 3.4vw, 26px);
+      font-weight:1000;
+      letter-spacing:.3px;
+      line-height:1.15;
+      white-space:pre-wrap;
+      word-break:break-word;
+    }
+    .countdown{
+      margin-top:12px;
+      font-family: ui-monospace, Menlo, Consolas, monospace;
+      font-size:12px;
+      opacity:.85;
+    }
   </style>
 </head>
 <body>
   <div id="clearLayer"></div>
-
   <div class="wrap" id="wrap">
     <div class="panel" id="panel">
-      <!-- This gets swapped between FLAG UI and CHECK-IN UI -->
       <div id="content"></div>
     </div>
   </div>
@@ -144,7 +95,7 @@
   const WORKER_BASE = "https://ifwl-flag.benjamin-leahy1.workers.dev";
   const POLL_MS = 500;
 
-  // ✅ NEW: flash safety window (ms)
+  // Flash window for red/vsc only
   const FLASH_MS = 4000;
 
   const clearLayer = document.getElementById("clearLayer");
@@ -185,20 +136,17 @@
     return "green";
   }
 
-  function resetBodyClasses(){
+  function resetAll(){
     document.body.className = "";
+    document.body.style.background = "";
   }
 
   function showGreenBlank(){
-    resetBodyClasses();
-
+    resetAll();
     wrap.style.display = "none";
     clearLayer.style.display = "block";
-
     clearLayer.style.opacity = "0.001";
-    requestAnimationFrame(() => {
-      clearLayer.style.opacity = "0.001";
-    });
+    requestAnimationFrame(() => { clearLayer.style.opacity = "0.001"; });
   }
 
   function showUI(){
@@ -218,55 +166,72 @@
     }
   }
 
-  // ✅ NEW: controlled flashing logic
+  // Flash controller for red/vsc
   let flashTimer = null;
   function applyFlash(baseClass){
-    // baseClass is "red" or "vsc"
-    // Start flash, then settle to solid after FLASH_MS
     if(flashTimer){ clearTimeout(flashTimer); flashTimer = null; }
-
-    // Ensure body has the base class + flash
     document.body.classList.remove("solid","flash");
     document.body.classList.add(baseClass, "flash");
-
     flashTimer = setTimeout(() => {
-      // Switch to solid (no animation)
       document.body.classList.remove("flash");
       document.body.classList.add("solid");
       flashTimer = null;
     }, FLASH_MS);
   }
-
   function stopFlash(){
     if(flashTimer){ clearTimeout(flashTimer); flashTimer = null; }
     document.body.classList.remove("flash","solid");
   }
 
-  function renderFlagUI(mode, updatedAt){
-    // clear everything and stop flash timers
-    resetBodyClasses();
+  // Broadcast renderer (no flashing)
+  let broadcastTimer = null;
+  function renderBroadcastUI(broadcast){
+    resetAll();
     stopFlash();
+    document.body.classList.add("broadcast_bg");
+    ensurePanelTextColor(false);
+
+    const now = Date.now();
+    const expiresAt = Number(broadcast?.expiresAt || 0);
+    const remainingMs = Math.max(0, expiresAt - now);
+    const remainingSec = Math.ceil(remainingMs / 1000);
+
+    content.innerHTML = `
+      <div class="big">
+        <span class="dot blue"></span>
+        <span>RACE CONTROL MESSAGE</span>
+      </div>
+      <div class="msgBox">${escapeHtml(String(broadcast?.message || ""))}</div>
+      <div class="countdown">Showing for ~${remainingSec}s</div>
+      <div class="stamp">Last update: ${broadcast?.ts ? fmt(broadcast.ts) : ""}</div>
+    `;
+
+    if(broadcastTimer){ clearTimeout(broadcastTimer); broadcastTimer = null; }
+    if(remainingMs > 0){
+      broadcastTimer = setTimeout(() => { broadcastTimer = null; }, remainingMs + 50);
+    }
+  }
+
+  function renderFlagUI(mode, updatedAt){
+    resetAll();
+    stopFlash();
+    ensurePanelTextColor(false);
 
     let dotClass = "green";
     let headline = "SERVER GOOD : ADHERE TO RACE FLAGS";
     let msg = "";
 
-    ensurePanelTextColor(false);
-
     if(mode === "red"){
-      // ✅ 2s flash then solid red
       applyFlash("red");
       dotClass = "red";
       headline = "RED FLAG";
       msg = "Drive to pits immediately. Send standings screenshot into Discord.";
     } else if(mode === "vsc_slow"){
-      // ✅ 2s flash then solid VSC amber
       applyFlash("vsc");
       dotClass = "yellow";
       headline = "VSC — FORMATION";
       msg = "Remain in formation. 1st gear, enable limiter, no overtaking.";
     } else if(mode === "vsc_pit"){
-      // ✅ 2s flash then solid VSC amber
       applyFlash("vsc");
       dotClass = "yellow";
       headline = "VSC — PIT NOW";
@@ -276,8 +241,8 @@
       headline = "SERVER RESET";
       msg = "Practice session is live. You have 15 minutes to re-enter the server.";
     } else if(mode === "green_console"){
-  // Neutral dark background (no green fill)
-      document.body.style.background = "#007F0E";  // same dark as Race Control
+      // neutral dark (no green bg)
+      document.body.style.background = "#0b1220";
       dotClass = "green";
       headline = "GREEN FLAG — CONSOLE ONLY";
       msg = "Adhere to in game rules and flags.";
@@ -323,7 +288,7 @@
   }
 
   function renderCheckinUI(){
-    resetBodyClasses();
+    resetAll();
     stopFlash();
     document.body.classList.add("purple");
     ensurePanelTextColor(false);
@@ -345,9 +310,7 @@
     const btn = document.getElementById("btnSendCheckin");
     const note = document.getElementById("checkinNote");
 
-    function normName(v){
-      return String(v || "").trim().replace(/\s+/g, " ");
-    }
+    function normName(v){ return String(v || "").trim().replace(/\s+/g, " "); }
 
     async function send(){
       const name = normName(inp.value);
@@ -373,9 +336,7 @@
         let data = {};
         try { data = text ? JSON.parse(text) : {}; } catch { data = { raw: text }; }
 
-        if(!res.ok){
-          throw new Error(data?.detail || data?.error || `HTTP ${res.status}`);
-        }
+        if(!res.ok) throw new Error(data?.detail || data?.error || `HTTP ${res.status}`);
 
         note.innerHTML = `<span class="ok">Checked in!</span> (${fmt(Date.now())})`;
         inp.value = "";
@@ -388,28 +349,49 @@
     }
 
     btn.addEventListener("click", send);
-    inp.addEventListener("keydown", (e) => {
-      if(e.key === "Enter") send();
-    });
-
+    inp.addEventListener("keydown", (e) => { if(e.key === "Enter") send(); });
     setTimeout(() => inp.focus(), 50);
   }
 
-  let lastMode = null;
+  let lastKey = null;
 
-  function apply(mode, updatedAt){
+  function apply(data){
+    const mode = getEffectiveMode(data);
+    const updatedAt = data?.updatedAt || null;
+
+    // ✅ broadcast overrides everything while active
+    const b = data?.broadcast || null;
+    if(b && b.expiresAt && b.expiresAt > Date.now() && b.message){
+      showUI();
+      const key = "broadcast:" + String(b.expiresAt) + ":" + String(b.ts);
+      if(key !== lastKey){
+        renderBroadcastUI(b);
+        lastKey = key;
+      } else {
+        // update countdown lightly
+        const cd = content.querySelector(".countdown");
+        if(cd){
+          const remainingSec = Math.ceil(Math.max(0, b.expiresAt - Date.now()) / 1000);
+          cd.textContent = `Showing for ~${remainingSec}s`;
+        }
+      }
+      return;
+    }
+
+    // no broadcast -> normal behaviour
     if(mode === "green"){
-      lastMode = mode;
+      lastKey = "green";
       showGreenBlank();
       return;
     }
 
     showUI();
 
-    if(mode !== lastMode){
+    const key = mode + ":" + String(updatedAt || "");
+    if(key !== lastKey){
       if(mode === "race_checkin") renderCheckinUI();
       else renderFlagUI(mode, updatedAt);
-      lastMode = mode;
+      lastKey = key;
     } else {
       if(mode !== "race_checkin"){
         const stampEl = content.querySelector(".stamp");
@@ -420,7 +402,7 @@
 
   function showOffline(){
     showUI();
-    resetBodyClasses();
+    resetAll();
     stopFlash();
     ensurePanelTextColor(false);
     content.innerHTML = `
@@ -431,7 +413,7 @@
       <p class="sub">Cannot reach Race Control endpoint.</p>
       <div class="stamp"></div>
     `;
-    lastMode = "offline";
+    lastKey = "offline";
   }
 
   async function poll(){
@@ -439,7 +421,7 @@
       const res = await fetch(`${WORKER_BASE}/state?t=${Date.now()}`, { cache:"no-store" });
       if(!res.ok) throw new Error("HTTP " + res.status);
       const data = await res.json();
-      apply(getEffectiveMode(data), data?.updatedAt || null);
+      apply(data);
     }catch{
       showOffline();
     }
