--- a/ifwlrc.html
+++ b/ifwlrc.html
@@ -29,7 +29,6 @@
     .green{background:radial-gradient(circle at 30% 25%, #86efac, #22c55e 45%, #14532d)}
     .blue{background:radial-gradient(circle at 30% 25%, #93c5fd, #3b82f6 45%, #1e3a8a)}
 
-    /* ✅ NEW: Quali split button styles (as requested) */
     .quallyRed{
       background:radial-gradient(circle at 30% 25%, #ff7a7a, #ef4444 45%, #7f1d1d);
       color:#fff;
@@ -45,16 +44,9 @@
       text-shadow:none;
     }
 
-    /* ✅ NEW: Smaller row for extra buttons */
     .rowSmall{margin-top:16px}
-    .smallCircle{
-      width:190px;
-      height:190px;
-      font-size:15px;
-      padding:14px;
-    }
+    .smallCircle{width:190px;height:190px;font-size:15px;padding:14px}
 
-    /* ✅ NEW: live green system circle (console button) */
     .liveDotWrap{
       margin-top:10px;
       display:flex;
@@ -67,10 +59,7 @@
       opacity:.95;
     }
     .liveDot{
-      width:14px;
-      height:14px;
-      border-radius:999px;
-      background:#22c55e;
+      width:14px;height:14px;border-radius:999px;background:#22c55e;
       box-shadow:0 0 0 0 rgba(34,197,94,.65);
       animation:pulse 1.25s infinite;
       border:1px solid rgba(255,255,255,.35);
@@ -130,7 +119,6 @@
     }
     .authNote{margin:8px 0 0;opacity:.8;font-size:12px;line-height:1.25}
 
-    /* Check-in panel */
     .panel{
       margin:18px auto 0;
       width: min(720px, 92vw);
@@ -163,20 +151,12 @@
     }
     .tinyBtn.danger{border-color:rgba(239,68,68,.55); background:rgba(239,68,68,.12)}
     .list{
-      margin:0;
-      padding:0;
-      list-style:none;
-      display:flex;
-      flex-direction:column;
-      gap:8px;
-      max-height:260px;
-      overflow:auto;
+      margin:0;padding:0;list-style:none;display:flex;flex-direction:column;gap:8px;
+      max-height:260px;overflow:auto;
     }
     .item{
       display:flex;justify-content:space-between;gap:10px;align-items:center;
-      padding:10px 12px;
-      border-radius:12px;
-      border:1px solid rgba(255,255,255,.14);
+      padding:10px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.14);
       background:rgba(0,0,0,.18);
       font-family: ui-monospace, Menlo, Consolas, monospace;
       font-size:12.5px;
@@ -184,45 +164,24 @@
     .itemName{font-weight:1000}
     .itemTime{opacity:.8}
 
-    /* Modal */
-    .modalBackdrop{
-      position:fixed;inset:0;display:none;align-items:center;justify-content:center;
-      background:rgba(0,0,0,.62);
-      padding:18px;
-      z-index:9999;
-    }
-    .modal{
-      width:min(560px, 92vw);
-      border-radius:16px;
+    /* ✅ NEW: Broadcast message composer */
+    .msgRow{display:flex;gap:10px;flex-wrap:wrap;align-items:flex-start}
+    .msgBox{
+      flex: 1 1 420px;
+      width:100%;
+      min-height:96px;
+      resize:vertical;
+      padding:12px 12px;
+      border-radius:12px;
       border:1px solid rgba(255,255,255,.18);
-      background:rgba(12,18,32,.92);
-      box-shadow:0 24px 80px rgba(0,0,0,.65);
-      padding:14px;
-      text-align:left;
-    }
-    .modalTop{display:flex;justify-content:space-between;align-items:center;gap:10px;margin-bottom:10px}
-    .modalTitle{
-      font-weight:1000;letter-spacing:.3px;
+      background:rgba(0,0,0,.25);
+      color:#fff;
+      outline:none;
       font-family: ui-monospace, Menlo, Consolas, monospace;
       font-size:13px;
+      line-height:1.25;
     }
-    .closeX{
-      width:auto;height:auto;border-radius:10px;padding:8px 10px;font-size:12px;
-      background:rgba(255,255,255,.10);
-      border:1px solid rgba(255,255,255,.18);
-      box-shadow:none;color:#fff;font-weight:900;cursor:pointer;
-    }
-    .modalBody{display:flex;flex-direction:column;gap:10px}
-    .modalBody label{font-size:12px;opacity:.85}
-    .modalBody input{
-      padding:11px 12px;border-radius:12px;border:1px solid rgba(255,255,255,.18);
-      background:rgba(0,0,0,.25);color:#fff;outline:none;
-      font-family: ui-monospace, Menlo, Consolas, monospace;
-      font-size:14px;
-    }
-    .modalActions{display:flex;gap:10px;flex-wrap:wrap;justify-content:flex-end;margin-top:2px}
-    .modalActions .tinyBtn{padding:10px 14px}
-    .modalActions .primary{border-color:rgba(34,197,94,.55); background:rgba(34,197,94,.14)}
+    .msgHelp{margin-top:8px;opacity:.8;font-size:12px;font-family: ui-monospace, Menlo, Consolas, monospace;}
   </style>
 </head>
 <body>
@@ -264,7 +223,6 @@
         Practice live (15 min)
       </button>
 
-      <!-- ✅ UPDATED PURPOSE: triggers the end-user SimHub check-in screen -->
       <button class="blue" id="btnCheckIn">
         RACE<br>CHECK-IN<br><br>
         Show driver<br>
@@ -272,9 +230,7 @@
       </button>
     </div>
 
-    <!-- ✅ NEW: Extra buttons (4) -->
     <div class="row rowSmall">
-      <!-- 1) Console-only Green Flag -->
       <button class="green smallCircle" id="btnGreenConsole">
         GREEN FLAG<br>
         <span style="font-weight:900;opacity:.95">— CONSOLE ONLY —</span><br><br>
@@ -285,19 +241,16 @@
         </div>
       </button>
 
-      <!-- 2) Quali split: Beginner (red box, white writing) -->
       <button class="quallyRed smallCircle" id="btnQBeginner">
         QUALI SPLIT<br><br>
         BEGINNER
       </button>
 
-      <!-- 3) Quali split: AMS (silver box, white writing) -->
       <button class="quallySilver smallCircle" id="btnQAms">
         QUALI SPLIT<br><br>
         AMS
       </button>
 
-      <!-- 4) Quali split: PROS (white box, black writing) -->
       <button class="quallyWhite smallCircle" id="btnQPros">
         QUALI SPLIT<br><br>
         PROS
@@ -326,34 +279,33 @@
       </ul>
     </div>
 
-    <div class="status" id="status">Ready.</div>
-    <div class="hint">Tip: keep this page private — it can trigger live race control.</div>
-  </div>
-
-  <!-- Modal (kept exactly as-is; no removals) -->
-  <div class="modalBackdrop" id="checkinModal">
-    <div class="modal">
-      <div class="modalTop">
-        <div class="modalTitle">RACE CHECK-IN</div>
-        <button class="closeX" id="btnCloseModal">Close</button>
-      </div>
-      <div class="modalBody">
-        <label for="checkinName">Type your name exactly as it should appear:</label>
-        <input id="checkinName" type="text" placeholder="e.g. Ben Leahy" maxlength="40" />
-        <div class="modalActions">
-          <button class="tinyBtn" id="btnCancelCheckin">Cancel</button>
-          <button class="tinyBtn primary" id="btnSendCheckin">Send</button>
+    <!-- ✅ NEW: Broadcast panel -->
+    <div class="panel">
+      <div class="panelHeader">
+        <div class="panelTitle">SEND MESSAGE TO ALL DRIVERS (shows 20s)</div>
+        <div class="panelBtns">
+          <button class="tinyBtn" id="btnSendBroadcast">Send message</button>
         </div>
       </div>
+
+      <div class="msgRow">
+        <textarea id="broadcastText" class="msgBox" maxlength="220"
+          placeholder="Type message here… (e.g. Please hold position at pit exit, stewards reviewing incident)"></textarea>
+      </div>
+      <div class="msgHelp">
+        Tip: keep it short. Message appears on SimHub overlay for 20 seconds, then disappears automatically.
+      </div>
     </div>
+
+    <div class="status" id="status">Ready.</div>
+    <div class="hint">Tip: keep this page private — it can trigger live race control.</div>
   </div>
 
   <script>
     const WORKER_BASE = "https://ifwl-flag.benjamin-leahy1.workers.dev";
     const TOKEN_KEY = "ifwl_racecontrol_token_v1";
-    const POLL_MS = 1000; // fallback polling every 1s (only used if SSE fails)
+    const POLL_MS = 1000;
 
-    // Check-in polling
     const CHECKIN_REFRESH_MS = 4000;
 
     const statusEl = document.getElementById("status");
@@ -374,18 +326,14 @@
     const btnRefreshCheckins = document.getElementById("btnRefreshCheckins");
     const btnClearCheckins = document.getElementById("btnClearCheckins");
 
-    // ✅ NEW buttons
     const btnGreenConsole = document.getElementById("btnGreenConsole");
     const btnQBeginner = document.getElementById("btnQBeginner");
     const btnQAms = document.getElementById("btnQAms");
     const btnQPros = document.getElementById("btnQPros");
 
-    // Modal elements (kept)
-    const modalBackdrop = document.getElementById("checkinModal");
-    const btnCloseModal = document.getElementById("btnCloseModal");
-    const btnCancelCheckin = document.getElementById("btnCancelCheckin");
-    const btnSendCheckin = document.getElementById("btnSendCheckin");
-    const checkinNameInput = document.getElementById("checkinName");
+    // ✅ NEW broadcast elements
+    const broadcastText = document.getElementById("broadcastText");
+    const btnSendBroadcast = document.getElementById("btnSendBroadcast");
 
     const buttons = [
       document.getElementById("btnRed"),
@@ -394,11 +342,10 @@
       document.getElementById("btnGreen"),
       document.getElementById("btnReset"),
       document.getElementById("btnCheckIn"),
-      // ✅ NEW: include new buttons in busy/disable logic
       btnGreenConsole,
       btnQBeginner,
       btnQAms,
-      btnQPros,
+      btnQPros
     ];
 
     endpointPill.textContent = `Endpoint: ${WORKER_BASE}`;
@@ -412,6 +359,7 @@
       for(const b of buttons) b.disabled = isBusy;
       btnRefreshCheckins.disabled = isBusy;
       btnClearCheckins.disabled = isBusy;
+      btnSendBroadcast.disabled = isBusy;
     }
 
     function setLive(ok, detail=""){
@@ -462,7 +410,6 @@
       return res.json();
     }
 
-    // --- Race Control send (unchanged) ---
     async function setState(state){
       const token = getToken();
       if(!token){
@@ -474,8 +421,6 @@
 
       setBusy(true);
       statusEl.textContent = `Sending "${state}"…`;
-
-      // Attempt POST. If it fails, we STILL verify via /state
       let postOk = false;
 
       try{
@@ -509,7 +454,6 @@
           `Verifying via /state…`;
       }
 
-      // Verify via /state
       try{
         await new Promise(r => setTimeout(r, 150));
         const fresh = await getState();
@@ -527,19 +471,66 @@
       }
     }
 
-    // ---- Check-ins (still used for admin list; unchanged) ----
-    function openModal(){
-      modalBackdrop.style.display = "flex";
-      checkinNameInput.value = "";
-      setTimeout(() => checkinNameInput.focus(), 50);
+    // ✅ NEW: broadcast message
+    function normMsg(v){
+      return String(v || "").replace(/\s+/g, " ").trim();
     }
 
-    function closeModal(){
-      modalBackdrop.style.display = "none";
+    async function sendBroadcast(){
+      const token = getToken();
+      if(!token){
+        statusEl.textContent =
+          "ERROR — Missing token.\n\n" +
+          "Enter the steward token at the top of the page and click 'Save token'.";
+        return;
+      }
+
+      const msg = normMsg(broadcastText.value);
+      if(!msg){
+        statusEl.textContent = "ERROR — Type a message first.";
+        broadcastText.focus();
+        return;
+      }
+
+      setBusy(true);
+      statusEl.textContent = "Sending message to all drivers (20s)…";
+
+      try{
+        const res = await fetch(`${WORKER_BASE}/broadcast`,{
+          method:"POST",
+          mode:"cors",
+          cache:"no-store",
+          headers:{
+            "Content-Type":"application/json",
+            "x-auth": token
+          },
+          body: JSON.stringify({ message: msg })
+        });
+
+        const text = await res.text();
+        let data = {};
+        try { data = text ? JSON.parse(text) : {}; } catch { data = { raw: text }; }
+
+        if(!res.ok){
+          throw new Error(data?.detail || data?.error || `HTTP ${res.status} — ${text || "no body"}`);
+        }
+
+        broadcastText.value = "";
+        statusEl.textContent = `OK — Message sent @ ${fmt(Date.now())}`;
+      }catch(e){
+        statusEl.textContent = `ERROR — Could not send message: ${e.message}`;
+      }finally{
+        setBusy(false);
+      }
     }
 
-    function normName(v){
-      return String(v || "").trim().replace(/\s+/g, " ");
+    // ---- Check-ins (unchanged) ----
+    function normName(v){ return String(v || "").trim().replace(/\s+/g, " "); }
+
+    function escapeHtml(s){
+      return String(s)
+        .replaceAll("&","&amp;").replaceAll("<","&lt;").replaceAll(">","&gt;")
+        .replaceAll('"',"&quot;").replaceAll("'","&#039;");
     }
 
     function renderCheckins(items){
@@ -552,21 +543,11 @@
       }
 
       const sorted = [...list].sort((a,b) => (b?.ts||0) - (a?.ts||0));
-
       checkinListEl.innerHTML = sorted.map(x => {
         const name = normName(x?.name) || "Unknown";
         const t = x?.ts ? fmt(x.ts) : "—";
         return `<li class="item"><span class="itemName">${escapeHtml(name)}</span><span class="itemTime">${t}</span></li>`;
       }).join("");
-    }
-
-    function escapeHtml(s){
-      return String(s)
-        .replaceAll("&","&amp;")
-        .replaceAll("<","&lt;")
-        .replaceAll(">","&gt;")
-        .replaceAll('"',"&quot;")
-        .replaceAll("'","&#039;");
     }
 
     async function fetchCheckins(){
@@ -585,54 +566,6 @@
       }
     }
 
-    async function sendCheckin(name){
-      const token = getToken();
-      if(!token){
-        statusEl.textContent =
-          "ERROR — Missing token.\n\n" +
-          "Enter the steward token at the top of the page and click 'Save token'.";
-        return;
-      }
-
-      const clean = normName(name);
-      if(!clean){
-        statusEl.textContent = "ERROR — Please type a name for check-in.";
-        return;
-      }
-
-      setBusy(true);
-      statusEl.textContent = `Sending check-in for "${clean}"…`;
-
-      try{
-        const res = await fetch(`${WORKER_BASE}/checkin`,{
-          method:"POST",
-          mode:"cors",
-          cache:"no-store",
-          headers:{
-            "Content-Type":"application/json",
-            "x-auth": token
-          },
-          body: JSON.stringify({ name: clean })
-        });
-
-        const text = await res.text();
-        let data = {};
-        try { data = text ? JSON.parse(text) : {}; } catch { data = { raw: text }; }
-
-        if(!res.ok){
-          throw new Error(data?.detail || data?.error || `HTTP ${res.status} — ${text || "no body"}`);
-        }
-
-        statusEl.textContent = `OK — Check-in added: "${clean}" @ ${fmt(Date.now())}`;
-        closeModal();
-        await refreshCheckins(false);
-      }catch(e){
-        statusEl.textContent = `ERROR — Check-in failed: ${e.message}`;
-      }finally{
-        setBusy(false);
-      }
-    }
-
     async function clearAllCheckins(){
       const token = getToken();
       if(!token){
@@ -642,9 +575,7 @@
         return;
       }
 
-      if(!confirm("Clear ALL check-ins?")){
-        return;
-      }
+      if(!confirm("Clear ALL check-ins?")) return;
 
       setBusy(true);
       statusEl.textContent = "Clearing all check-ins…";
@@ -678,9 +609,7 @@
       }
     }
 
-    // ✅ NEW: after enabling check-in mode, do a quick refresh burst so list fills fast
     function burstRefreshCheckins(){
-      // 0s, 1s, 2s, 3s then normal timer continues
       refreshCheckins(false);
       setTimeout(() => refreshCheckins(false), 1000);
       setTimeout(() => refreshCheckins(false), 2000);
@@ -694,30 +623,25 @@
     document.getElementById("btnGreen").addEventListener("click", ()=>setState("green"));
     document.getElementById("btnReset").addEventListener("click", ()=>setState("server_reset"));
 
-    // ✅ NEW: Console green + Quali split notifications
-    // These are just new state strings sent through the same Durable Object so your simhub_flag HTML can react instantly.
     btnGreenConsole.addEventListener("click", ()=>setState("green_console"));
     btnQBeginner.addEventListener("click", ()=>setState("qually_beginner"));
     btnQAms.addEventListener("click", ()=>setState("qually_ams"));
     btnQPros.addEventListener("click", ()=>setState("qually_pros"));
 
-    // ✅ UPDATED: blue button triggers end-user check-in screen (does NOT open modal)
     btnCheckIn.addEventListener("click", async () => {
       await setState("race_checkin");
       burstRefreshCheckins();
     });
 
-    // Modal controls (kept)
-    btnCloseModal.addEventListener("click", closeModal);
-    btnCancelCheckin.addEventListener("click", closeModal);
-    modalBackdrop.addEventListener("click", (e) => {
-      if(e.target === modalBackdrop) closeModal();
+    // ✅ NEW: send broadcast button
+    btnSendBroadcast.addEventListener("click", sendBroadcast);
+    broadcastText.addEventListener("keydown", (e) => {
+      // Ctrl+Enter to send quickly
+      if((e.ctrlKey || e.metaKey) && e.key === "Enter"){
+        e.preventDefault();
+        sendBroadcast();
+      }
     });
-    checkinNameInput.addEventListener("keydown", (e) => {
-      if(e.key === "Enter") sendCheckin(checkinNameInput.value);
-      if(e.key === "Escape") closeModal();
-    });
-    btnSendCheckin.addEventListener("click", () => sendCheckin(checkinNameInput.value));
 
     // Check-in panel buttons
     btnRefreshCheckins.addEventListener("click", () => refreshCheckins(true));
@@ -753,9 +677,7 @@
         try{
           const data = await getState();
           updateCurrentPill(data);
-        }catch{
-          // ignore; pill stays last known
-        }
+        }catch{}
       };
 
       tick();
